--- a/src/main/resources/templates/modify.html
+++ b/src/main/resources/templates/modify.html
@@ -174,7 +174,7 @@
                                             <label class="form-check-label text-info"
                                                    for="flexSwitchCheckDefault">댓글막기</label>
                                         </span>
-                                        <span th:if="${question.onOff}">
+                                        <span th:if="${board.onOff}">
                                             <input class="form-check-input" type="checkbox" name="onOff"
                                                    id="flexSwitchCheckChecked" checked>
                                             <label class="form-check-label text-info"
