--- a/src/main/resources/templates/board_form.html
+++ b/src/main/resources/templates/board_form.html
@@ -97,7 +97,7 @@
 
                         <div class="mb-3">
                             <strong for="file" class="form-label">사진/영상</strong>
-                            <input multiple="multiple" name="multiFile" type="file" class="form-control" id="btnAtt">
+                            <input multiple="multiple" name="multiFile" type="file" class="form-control" id="btnAtt" required>
                             <div id='att_zone' data-placeholder='파일을 첨부 하려면 파일 선택 버튼을 클릭하세요'></div>
                         </div>
                         <button type="submit" class="btn">
