대댓글 일단 추가

--- a/src/main/resources/templates/board_detail.html
+++ b/src/main/resources/templates/board_detail.html
@@ -6,7 +6,7 @@
 
         <!-- 상단 친구목록? 내용물 관련 -->
         <div class="mt-4"> <!-- 네비바와 거리띄우기 -->
-            <div class="container d-flex justify-content-center">
+            <div class="main_container d-flex justify-content-center">
                 <div class="col-9">
                     <div class="row">
                         <div class="col-8 p-0">
@@ -85,23 +85,34 @@
                                         <div class="card-body bg-white ">
                                             <div th:each="answer : ${board.answerList}" class ="border-bottom my-2">
 
-                                                <div class="d-flex justify-content-between">
-                                                    <div th:text="${answer.content}"></div>
-                                                    <button type="button" class="btn form-inline pt-0 pb-10"
-                                                            id="myModal"
-                                                            data-bs-toggle="modal"
-                                                            data-bs-target="#exampleModal" th:data-id="${answer.id}"
-                                                            th:data-content="${board.content}">
-                                                        <img src="https://img.icons8.com/stickers/344/ellipsis.png"
-                                                             width="20" height="20"
-                                                             alt="">
-                                                    </button>
-                                                </div>
-                                                <div class="d-flex justify-content-between">
-                                                    <div th:text="${#temporals.format(answer.createDate, 'M월 d일')}"></div>
+                                                <button type="button" class="btn form-inline pt-0 pb-10 "
+                                                        id="myModal"
+                                                        style="float:right;"
+                                                        data-bs-toggle="modal"
+                                                        data-bs-target="#exampleModal" th:data-id="${answer.id}"
+                                                        th:data-content="${board.content}">
+                                                    <img src="https://img.icons8.com/stickers/344/ellipsis.png"
+                                                         width="20" height="20"
+                                                         alt="">
+                                                </button>
+                                                <div th:text="${answer.content}"></div>
+                                                <div class="d-flex justify-content-between align-items-center w-100" >
+                                                    <div class="pr-2"
+                                                         th:text="${#temporals.format(answer.createDate, 'M월 d일')}"></div>
+                                                    <div class="position-relative w-50">
+                                                        <form th:action="@{|/answer/create/detail/${board.id}/${answer.id}|}"
+                                                              method="post">
+                                                            <input name="content" class="w-100 border-0" type="text"
+                                                                   placeholder="답글달기">
+                                                            <button type="submit"
+                                                                    class="position-absolute btn-st fw-bold">
+                                                                확인
+                                                            </button>
+                                                        </form>
+                                                    </div>
                                                     <!-- 좋아요 싫어요 -->
                                                     <form th:action="@{|/answer/detail/like/${answer.id}|}"
-                                                          method="post">
+                                                          method="post" style="float:right;">
                                                         <div th:if="${answer.replyLike}">
                                                             <button class="btn pr-5  pt-0 m-0">
                                                                 <svg type="submit" xmlns="http://www.w3.org/2000/svg"
