--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <script src="https://developers.kakao.com/sdk/js/kakao.min.js"></script>
+    <link rel="stylesheet" th:href="@{/nav.css}">
     <link rel="stylesheet" th:href="@{/story.css}">
     <link rel="stylesheet" th:href="@{/setprofile.css}">
     <link rel="stylesheet" th:href="@{/profile.css}">
